<resources>
    <string name="app_name">TelegramWear</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="welcome_title"><b>Telegram</b></string>
    <string name="welcome_subtitle">L\'app di messaggistica più <b>veloce</b> al mondo. \n É <b>gratis</b> e <b>sicura</b>.</string>
    <string name="welcome_title_icon_desc">Icona telegram</string>
    <string name="welcome_button">Iniziamo</string>
    <string name="login_qr_code_image_descriptipn">QR Code</string>
    <string name="login_qr_code_info">Scannerizza il <b>QR Code</b> dal tuo telefono</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="login_number_title">Inserisci il tuo numero di telefono (compreso di prefisso)</string>
    <string name="login_number_text_field_placeholder">+391234567</string>
    <string name="login_number_confirm_button">Conferma</string>
    <string name="login_auth_title">Scegli come autenticarti:</string>
    <string name="login_auth_qrcode">QR Code</string>
    <string name="login_auth_phone_number">Numero di telefono</string>
    <string name="login_otp_confirm_button">Conferma</string>
    <string name="login_otp_title">Inserisci il codice ricevuto su Telegram (su un altro dispositivo già connesso)</string>
    <string name="login_otp_placeholder">1234567</string>
    <string name="login_otp_wrong_code">OTP errato</string>
    <string name="login_2fa_title">Inserisci la password per la 2FA</string>
    <string name="login_2fa_placeholder">1234567</string>
    <string name="login_2fa_wrong_code">Password errata</string>
    <string name="login_2fa_confirm_button">Conferma</string>
    <string name="login_auth_phone_number_otp_sent_failed">Si è verificato un problema durante l\'invio del codice otp</string>
    <string name="login_2fa_errror">Si è verificato un problema o la password è errata</string>
    <string name="login_auth_qr_code_info">Scannerizza il qr code dall\'app telegram sul tuo smartphone.</string>
    <string name="login_auth_phone_url_tap_here">Clicca qui</string>
    <string name="login_auth_phone_url_title">Login link:</string>
    <string name="login_auth_phone_url_error">Si è verificato un errore, riprova più tardi.</string>
    <string name="chat_list_load_more">Carica altro</string>
    <string name="chat_list_loading_error">Si è verificato un errore durante il caricamento delle chat.</string>
    <string name="chat_history_not_supported_message">Messaggio non supportato</string>
    <string name="last_message_date_less_than_minute"><![CDATA[< 1 minuto]]></string>
    <string name="last_message_date_one_minute">1 minuto</string>
    <string name="last_message_date_n_minutes">%1$s minuti</string>
    <string name="last_message_date_one_hour">1 ora</string>
    <string name="last_message_date_n_hours">%1$s ore</string>
    <string name="last_message_date_one_day">1 giorno</string>
    <string name="last_message_date_n_days">%1$s giorni</string>
    <string name="chat_title_deleted_account">Account eliminato</string>
    <string name="last_message_unsupported_message">Messaggio non supportato</string>
    <string name="last_message_draft">Bozza: %1$s</string>
</resources>